--- a/app/nginx.tmpl
+++ b/app/nginx.tmpl
@@ -1,4 +1,8 @@
 {{ define "upstream" }}
+
+{{- $upstream_host := or (env "UPSTREAM_HOST") "localhost" }}
+{{- $upstream_port := or (env "UPSTREAM_PORT") "80" }}
+
 {{- if not .FIRST.Get -}}
 	upstream {{.HOST}} {
 {{- end -}}
